--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,102 @@
-.header {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: rgba(0, 0, 0, 0.1);
-}
+@import "mobile.css" screen and (max-width: 1023px);
+@import "desktop.css" screen and (min-width: 1024px);
 
 .container {
-    position: relative;
+    display: flex;
+    flex-direction: column;
+    background: linear-gradient(117.5deg, rgb(89, 233, 162) 20.5%, rgb(29, 209, 185) 100.2%);
+}
+
+.projects {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.2);
+    width: 100%;
+    height: 98vh;
+}
+
+.download-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 1rem;
+    padding: 1rem;
+    border-radius: 0.5rem;
+}
+
+.download-button:hover {
+    background-color: rgba(0, 143, 0, 0.6);
+}
+
+.download-button:active {
+    background-color: rgba(239, 19, 19, 0.4);
+}
+
+.projects-intro {
+    padding: 0.5rem;
+    margin: 0.5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.app-name {
+    font-size: 1.5rem;
+    font-weight: normal;
+    line-height: 1;
+    color: #f2f2f2;
+}
+
+a {
+    background-color: rgba(0, 51, 0, 0.4);
+    border-radius: 0.5rem;
+    border: none;
+    color: #fff;
+    font-size: 1rem;
+    font-weight: bold;
+    padding: 0.5rem 1rem;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    transition: background-color 0.3s ease;
+    user-select: none;
+}
+
+.preview {
+    display: grid;
+    grid-gap: 0.5rem;
+}
+
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    :hover {
+        filter: brightness(80%);
+    }
+}
+
+img {
+    max-width: 95%;
+    max-height: 95%;
+    border-radius: 0.5rem;
+    box-shadow: 0px 0px 2rem rgba(0, 0, 0, 0.5);
+}
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.overlay img {
+    max-width: 90%;
+    max-height: 90%;
 }
